Fix empty state text color in dark mode

--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -34,7 +34,7 @@ option {
 }
 
 @media (prefers-color-scheme: dark) {
-	select {
+	body {
 		color: white;
 	}
 }
